# wcurve

./: .gitignore  AUTHORS  FIXES  Makefile.am  README  TODO  configure.in  tags  wcurve.kdevprj  wcurve.lsm
admin/: acinclude.m4.in  am_edit  mkinstalldirs
steve/lib/: WCurve.pm  WCurve.pm.new  WCurve.pm~
steve/single-node/: WCurve.pm  WCurve2.pm  compare-genes  fork-harness  fork-harness-fasta  test-harness
wcurve/: Makefile.am  buttongroup.xpm  displaylist.cpp  displaylist.h  globaltypes.h  main.cpp  nogapparser.cpp  nogapparser.h  origingapparser.cpp  origingapparser.h  pentagapparser.cpp  pentagapparser.h  plotview.cpp  plotview.h  repeatgapparser.cpp  repeatgapparser.h  sequenceparser.cpp  sequenceparser.h  sequenceview.cpp  sequenceview.h  vector3d.cpp  vector3d.h  wcurve.cpp  wcurve.h  wcurvedata.cpp  wcurvedata.h  wcurvedoc.cpp  wcurvedoc.h  wcurvelistviewitem.cpp  wcurvelistviewitem.h  wcurveview.cpp  wcurveview.h
wcurve/docs/en/: Makefile.am  index.sgml
