####### kdevelop will overwrite this part!!! (begin)##########


EXTRA_DIST = index.html index-1.html index-2.html index-3.html index-4.html index-5.html index-6.html 

install-data-local:
	$(mkinstalldirs) $(prefix)/doc/wcurve/
	$(INSTALL_DATA) $(srcdir)/index.html $(prefix)/doc/wcurve/index.html
	$(mkinstalldirs) $(prefix)/doc/wcurve/
	$(INSTALL_DATA) $(srcdir)/index-1.html $(prefix)/doc/wcurve/index-1.html
	$(mkinstalldirs) $(prefix)/doc/wcurve/
	$(INSTALL_DATA) $(srcdir)/index-2.html $(prefix)/doc/wcurve/index-2.html
	$(mkinstalldirs) $(prefix)/doc/wcurve/
	$(INSTALL_DATA) $(srcdir)/index-3.html $(prefix)/doc/wcurve/index-3.html
	$(mkinstalldirs) $(prefix)/doc/wcurve/
	$(INSTALL_DATA) $(srcdir)/index-4.html $(prefix)/doc/wcurve/index-4.html
	$(mkinstalldirs) $(prefix)/doc/wcurve/
	$(INSTALL_DATA) $(srcdir)/index-5.html $(prefix)/doc/wcurve/index-5.html
	$(mkinstalldirs) $(prefix)/doc/wcurve/
	$(INSTALL_DATA) $(srcdir)/index-6.html $(prefix)/doc/wcurve/index-6.html

uninstall-local:
	-rm -f $(prefix)/doc/wcurve/index.html
	-rm -f $(prefix)/doc/wcurve/index-1.html
	-rm -f $(prefix)/doc/wcurve/index-2.html
	-rm -f $(prefix)/doc/wcurve/index-3.html
	-rm -f $(prefix)/doc/wcurve/index-4.html
	-rm -f $(prefix)/doc/wcurve/index-5.html
	-rm -f $(prefix)/doc/wcurve/index-6.html

####### kdevelop will overwrite this part!!! (end)############
